--- a/twa-manifest.json
+++ b/twa-manifest.json
@@ -14,7 +14,7 @@
   "enableNotifications": true,
   "startUrl": "/",
   "iconUrl": "https://mobile-travel-list.netlify.app/pwa-512x512.png",
-  "maskableIconUrl": "https://mobile-travel-list.netlify.app/icons/maskable-512.png",
+  "maskableIconUrl": "https://mobile-travel-list.netlify.app/maskable-512x512.png",
   "splashScreenFadeOutDuration": 300,
   "signingKey": {
     "path": "C:\\Users\\Me\\Desktop\\travelapp\\travel-checklist\\android.keystore",
