--- a/twa-manifest.json
+++ b/twa-manifest.json
@@ -35,7 +35,7 @@
   "isMetaQuest": false,
   "fullScopeUrl": "https://mobile-travel-list.netlify.app/",
   "minSdkVersion": 21,
-  "orientation": "default",
+  "orientation": "portrait",
   "fingerprints": [],
   "additionalTrustedOrigins": [],
   "retainedBundles": [],
